# -David-Simon-Karim-Kseniia-final-project

./: .hand_detection_simon.py.swp  .motion.py.swp  CMakeLists.txt  README.md  arm_motion.py  error.txt  final.launch  hand_detection.py  hand_detection_simon.py  hand_detection_simon_v2.py  motion.py  package.xml  test_arm_motion.ipynb  test_model.py
old_items/: train_model.py
training/: dataset_generator.ipynb  test_preprocessing.ipynb
